@@ -18,6 +18,7 @@
 #include <iostream>
 
 #include "common.hh"
+
 #include <roboptim-core/visualization/gnuplot.hh>
 #include <roboptim-core/visualization/gnuplot-commands.hh>
 #include <roboptim-core/visualization/gnuplot-function.hh>
